# Rust-With-Screenreader

./: .gitignore  Readme.md  bin  soap.txt
Advanced/axum/: Cargo.toml  message.json  mrbs.json  mtest.json
Advanced/axum-single/: Cargo.toml
Advanced/axum-single/src/: main.rs
Advanced/axum_new/: Cargo.toml  index.html
Advanced/axum_new/src/: main.rs
Advanced/basic-tauri/: package-lock.json  package.json
Advanced/basic-tauri/src-tauri/: Cargo.toml  tauri.conf.json
Advanced/bloomtest/: Cargo.toml
Advanced/bloomtest/src/: group.rs  main.rs
Advanced/braille-interact/: Cargo.toml
Advanced/braille-interact/src/: main.rs
Advanced/chrono-test/: Cargo.toml
Advanced/chrono-test/src/: main.rs
Advanced/crypto/: Cargo.toml
Advanced/crypto/src/: main.rs
Advanced/crypto/src/Aes256Siv/: main.rs
Advanced/crypto/src/raw/: mod.rs
Advanced/crypto/src/tink/: mod.rs
Advanced/data_iceberg/: Cargo.toml  Dockerfile
Advanced/data_iceberg/src/: main.rs
Advanced/example/: kontakt.html
Advanced/example/src/: main.rs
Advanced/html/: Cargo.toml
Advanced/maf-parqulet/: Cargo.toml
Advanced/maf-parqulet/src/: main.rs
Advanced/maf-parqulet/src/parquet/: handler.rs  mod.rs
Advanced/multiplex/: Cargo.toml
Advanced/multiplex/src/: main.rs
Advanced/regex-test/: Cargo.toml
Advanced/regex-test/src/: main.rs
Advanced/request-example/: Cargo.toml
Advanced/request-mainzelliste/: Cargo.toml
Advanced/sequencing-dna/: Cargo.toml
Advanced/svelte-tauri/: DemoRaumplanner.md  package-lock.json
Advanced/test_authentik/: Cargo.toml
Advanced/test_authentik/src/: main.rs
Advanced/workflow-demo/: Cargo.toml  Readme.md
Advanced/workflow-demo/demo/: demo.md
Advanced/workflow-demo/dev/: docker-compose.demo.yml
Advanced/workflow-demo/src/: lib.rs
Advanced/workflow-demo/src/activities/: mod.rs
Advanced/workflow-demo/src/workflow/: mod.rs
Advanced/yew-app/: Cargo.toml  Trunk.toml
Advanced/yew-app/src/: main.rs
Advanced/yew-app/src/group/: mod.rs  request_mrbs.rs  reqwasm_mrbs.rs  reqwest_mrbs.rs
Advanced/yew-tauri/: Cargo.toml
Basic/Deriving/: Cargo.toml
Basic/RandomGuess/: Cargo.toml
Basic/TemperatureImpl/: Cargo.toml
Basic/Vektor/: Cargo.toml
Basic/axum-workspace/: Cargo.toml  soap.txt
Basic/axum-workspace/generate-num/: Cargo.toml
Basic/axum-workspace/generate-num/src/: main.rs
Basic/bills/: Cargo.toml
Basic/dec2bin/: Cargo.toml
Basic/error_const/: Cargo.toml
Basic/if_while_crate/: Cargo.toml
Basic/modul/: Cargo.toml
Basic/new-type_pattern/: Cargo.toml
Basic/option_combinators/: Cargo.toml
Basic/range_traits/: Cargo.toml
Basic/server/: 404.html  index.html
Basic/sqlite_cat/: Cargo.toml
Basic/sqlite_person/: Cargo.toml
Basic/sqlite_test/: Cargo.toml  dogs.db
Basic/test/: main.rs
Basic/warp_api/: Cargo.toml
Exercise/: Cargo.toml
android/file_test/: Cargo.toml
android/file_test/src/: lib.rs
tauri/BrailleGame/: package-lock.json  package.json
tauri/BrailleTrainer/: Cargo.toml
tauri/api_access/: package-lock.json  package.json
tauri/test-android/: package-lock.json  package.json
(+117 files in other folders)
