[package]
name = "test_authentik"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.91"
serde_json = "1.0.132"
