[package]
name = "workflow-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "workflow_demo"
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
temporalio-sdk = "0.4.0"
temporalio-sdk-core = "0.4.0"
temporalio-client = "0.4.0"
temporalio-common = "0.4.0"
temporalio-macros = "0.4.0"
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version =  "0.4.44", features = ["serde"] }
axum = "0.8.9"
http = "1.4.0"