[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
wasm-bindgen-futures = "0.4.41"
web-sys = "0.3.68"
yew = { version = "0.21.0", features = ["csr"] }
