[package]
name = "file_test"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
[dependencies]
log = "0.4.22"
ndk = "0.9.0"
ndk-glue = "0.7.0"

[dependencies.ndk-sys]
version = "0.6.0+11769913"

[package.metadata.android]
package-name = "com.example.rustandroidfileapp"
build-tools-version = "35.0.1"
target-sdk-version = 30
min-sdk-version = 21
